Fetch and show users

--- a/.env
+++ b/.env
@@ -1,3 +1,18 @@
 GITHUB_ID=Iv1.fc61d8b86c907b26
 GITHUB_SECRET=c935df1a94221a99fca5c0c67d7e2c912dbf1b17
 NEXTAUTH_SECRET=3d1557176708df3c86793f84f845cd9b
+PGHOST='ep-shiny-violet-454484.us-east-2.aws.neon.tech'
+PGDATABASE='nextspace'
+PGUSER='AnotherPianist'
+PGPASSWORD='rFMXmhGp45Cn'
+
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgres://AnotherPianist:rFMXmhGp45Cn@ep-shiny-violet-454484.us-east-2.aws.neon.tech/nextspace"
+SHADOW_DATABASE_URL="postgres://AnotherPianist:rFMXmhGp45Cn@ep-shiny-violet-454484.us-east-2.aws.neon.tech/shadow"
